# AutoTrack-backend

./: .env.sample  .gitignore  APIDocument.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
.sqlx/: query-0183576fa607d20729255c8a9ba7ed983a7f49784cd2053e4abcc2cfc29fa0d1.json  query-07312448d5b677f96c99dea935a4cb4abc8185b687ecb39cc2fb11b743ce1fb1.json  query-09170da8af75a4f4fd5b771a6803475d520fab33a262942f21bd65e0a3dd45e3.json  query-0952999c69f1b55fb6d8a20dce8c870d282c05a6f9080d8890d4cd409d0e3696.json  query-099311bc4fe5f951dedda7d4e6cd0d9006fee9e1c6480c1add649229dbdccdd1.json  query-0ba523adb52448633a14dabe0781de8492bd8218dfcbedf984c8c1179d6fe629.json  query-0db9ffe1031ca7c40af9eb77c8bfc1fd48e45d2728003f89d378f846798191ec.json  query-0f643257fb703588637eb715e1dbe13a9213a01a0462fbea2cef4bc6a962178d.json  query-0fd2f694115f13fe0524694251e58ea04ce74e37fb93293003768f6f6839f8d2.json  query-12964891af1269062d862d8749edc1e00999c2052126b8b2df5ab9cb735d4164.json  query-14a5695e6ad46d0482daf99ee5b03e39c84ce26d00bcfb8867306a15972924a3.json  query-150224fe53c1a29749feddb003addedd22ace1f7bb9cc278588a66f3c928d821.json  query-1ca20dc247ad2d8c3128987c84e84b0e201ff265909dd0a4ee1b4e55211ac3b0.json  query-212209b8a00f440d5dcca37ec6bbdd60073fc81ba380ad13839fb0f7a22bd320.json  query-25a9eafb2923d3da46a55d8f010ba09c1e2a43492cb2eeb3158dcc6c1ac4e5cb.json  query-28875c5ae05bd20cc541297b3b27fac5c45813c40b2804f9596fae61199be3f7.json  query-29f34bbd4edcafdc57572983b7cc528938c5a3328d1bb11f95ae959a5acf7633.json  query-2c0a46a54d0c00926bc4589447072fe547c4cd5bcb3e2af89623b4d104d333f3.json  query-2cc0f9f75ca2f180f40da4084e171f1e5a625a54a07e52fdcd57a7f6478b1c06.json  query-2d43e2d333acb152602db30bc2f631afdaaa2a0f41d2819bbdafb36a01a0f4fc.json  query-2e509b117b2b36f445769bc355aa760e4e00457ce552f41e2a09bd77faa0f0f4.json  query-34e54b6bb827afdb8484f0e150ba20293aa64a97d8ecf338655453fdce13149b.json  query-3593cc4f8456e78ede5319ee31bcfaa670e74579158f518c4d4d4571b9e10191.json  query-365045b09740b1df619d65e8c465c9198df8863929688d97f13b83988eee80d1.json  query-3664fb310490e5a475fc4eb6c2a9a923ed7668dad947538f1645864235cfe9cc.json  query-38d92f25c78230d23c5c080d30b5647df8e6b62dea99f6d6c2b3638f9adb3185.json  query-3a502910421de71e916be9aec74f548f23ec2575d004e362e31fa9ad4dbcbc05.json  query-3a892c76be0d17809ac73ca6373ea562489ff844826032c6da4008caf6a4de10.json  query-3d65888b672aa76d15d6b8d81507c501f680106155b2262c4356d425751a1cde.json  query-3da9948d13b2aaee216bc2698320608da7d72e33ffaafe3f7b19db5111cbff72.json  query-3fb0fa825ff11b41a4e98e9c03bea0baf913d00b89cb2a47f1fb6af5b9367ee0.json  query-3fb42a9e23020014b06fff5044f6d829f1f43328a2dc7be50fb4422efda48e65.json  query-4297ddb882484b92942c2b2724b74e15f926f0d4b0d520b823f4c7b5240c4bef.json  query-445906cb4346e148ddd65b9f7f93bd873417bf417865ba5dacae3c39165368e8.json  query-44cd31ad17a8e63cfc18b940e77bc8460718c978fe131fd8f58cda65e0e631a9.json  query-45f78a0401852ee29518b93685652858107ee1825006c9164b0167dbc2a7fe0f.json  query-466bfd3e5e16c514aa5af42b1ffd7e608cd0c59d03ca1d02fe18dab10550a772.json  query-4870cf321654b9fc2b1cbfeec01700d35af421d738697cbb36db373abf7d0d44.json  query-49a3b9f20c669956d785c62f36dbe3af4c9636d923f1bb5a1a510ed1cedaa350.json  query-4d293d238fa3bcad908b261218870a8fea07ad4ed16769de5b7c9cbfb911b5c5.json  (+65 more)
(+27 files in other folders)
