[package]
name = "auto_track-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","mysql", "time", "chrono",  "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }