[package]
name = "auto_track-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls","mysql", "time", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = { version = "0.15.0" }
serde_json = { version = "1.0.118" }
uuid = { version = "1.9.1", features =["v4"] }
hyper = "1.3.1"
log = "0.4.22"
hex = "0.4.3"
aws-config = "1.5.4"
aws-sdk-s3 ="1.41.0"
cloudflare-r2-rs = "0.6.2"
tower = "0.4.13"
multer = "3.1.0"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["limit", "cors", "trace"] }
rs-firebase-admin-sdk = "1.2.2"
jsonwebtoken = "9.3.0"
anyhow = "1.0.86"
utoipa = "4.2.3"
lazy_static = "1.5.0"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"

[[bin]]
name = "auto_track-backend"
path = "src/main.rs"
